[gd_scene load_steps=6 format=2]

[ext_resource path="res://Arena.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 960, 25 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 960, 25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 25, 540 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 25, 540 )

[node name="Arena" type="Node2D"]
script = ExtResource( 1 )

[node name="TopWall" type="StaticBody2D" parent="." groups=[
"wall",
]]
position = Vector2( 960, 25 )

[node name="Top" type="CollisionShape2D" parent="TopWall"]
shape = SubResource( 1 )

[node name="BottomWall" type="StaticBody2D" parent="." groups=[
"wall",
]]
position = Vector2( 960, 1055 )

[node name="Bottom" type="CollisionShape2D" parent="BottomWall"]
shape = SubResource( 2 )

[node name="LeftWall" type="StaticBody2D" parent="." groups=[
"wall",
]]
position = Vector2( 25, 540 )

[node name="Left" type="CollisionShape2D" parent="LeftWall"]
shape = SubResource( 3 )

[node name="RightWall" type="StaticBody2D" parent="." groups=[
"wall",
]]
position = Vector2( 1895, 540 )

[node name="Right" type="CollisionShape2D" parent="RightWall"]
shape = SubResource( 4 )
